// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket Tailor Coldharbour Blue retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor Curzon Wimbledon retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor Good Shepherd Studios retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/2174818",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1785436200000,
      },
    ],
    "showingId": "tickettailor.com-2174818",
    "title": "Two Wheels/Two Films",
    "url": "https://www.tickettailor.com/events/weflockcic/2174818",
  },
]
`;

exports[`Ticket Tailor Lost Cinema retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor Siobhan Davies Studios retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor The Haggerston retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/midweekcinema/2294117?date=2026-08-03",
        "format": {},
        "notes": "Presented by Midweek Cinema",
        "status": {},
        "time": 1785780000000,
      },
    ],
    "showingId": "tickettailor.com-2294117",
    "title": "Tangerine (2015)",
    "url": "https://www.tickettailor.com/events/midweekcinema/2294117?date=2026-08-03",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/midweekcinema/2296117?date=2026-09-01",
        "format": {},
        "notes": "Presented by Midweek Cinema",
        "status": {},
        "time": 1788285600000,
      },
    ],
    "showingId": "tickettailor.com-2296117",
    "title": "Hard Eight (1996)",
    "url": "https://www.tickettailor.com/events/midweekcinema/2296117?date=2026-09-01",
  },
]
`;
